added footer and changed padding

--- a/landing-page.html
+++ b/landing-page.html
@@ -18,12 +18,14 @@
 
  <div class="menuLabelContainer">
      <!--Contains all my links for the main title bar for the site-->
+     <nav>
      <div class="sectionLinks">
          <label><div class="section" id="home">Home</div></label>
          <label><div class="section" id="projects"><a href="landing-page.html#menuLabelContainer">Projects</a></div></label>
          <label><div class="section" id="aboutMe"> AboutMe</div></label>
          <label><div class="section" id="contactMe"> ContactMe</div></label>
      </div>
+     </nav>
  </div>
     <div class="logoContainer">
         <div id="logo">
@@ -32,9 +34,15 @@
     </div>
 </header>
 <body>
-
+hi
     
 </body>
-
+<footer>
+  <div class="footerContainer">
+      <div id="license">
+          
+      </div>
+  </div>
+</footer>
 
 </html>
